--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,9 +12,13 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "axios": "^1.11.0",
+    "chart.js": "^4.5.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.540.0",
     "react": "^19.1.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
     "react-is": "^19.1.1",
     "react-leaflet": "^5.0.0",
