--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,1 +1,1 @@
-API_BASE_URL = https://simdag-nest-backup-production.up.railway.app/ 
+VITE_API_BASE_URL=https://simdag-nest-backup-production.up.railway.app
