--- a/Frontend/.env.example
+++ b/Frontend/.env.example
@@ -6,12 +6,10 @@
 VITE_API_BASE_URL=http://localhost:3000
 
 # Untuk production (ganti dengan URL backend yang sudah di-deploy):
-# VITE_API_BASE_URL=https://your-backend-api.herokuapp.com
-# VITE_API_BASE_URL=https://your-backend-api.railway.app
-# VITE_API_BASE_URL=https://your-backend-api.render.com
+# VITE_API_BASE_URL=https://simdag-nest-backup-production.up.railway.app
 
 # Contoh untuk berbagai hosting provider:
 # Railway: https://simdag-backend-production.up.railway.app
 # Heroku: https://simdag-backend.herokuapp.com
-# Render: https://simdag-backend.onrender.com
+# Railway: https://simdag-nest-backup-production.up.railway.app
 # Vercel: https://simdag-backend.vercel.app
