--- a/netlify.toml
+++ b/netlify.toml
@@ -6,6 +6,7 @@
 [build.environment]
   NODE_VERSION = "20"
   NPM_VERSION = "9"
+  VITE_API_BASE_URL = "https://simdag-nest-backup-production.up.railway.app"
 
 # Redirect rules for React Router
 [[redirects]]
