--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -3,12 +3,13 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
+"scripts": {
+  "dev": "vite",
+  "build": "echo \" VITE_API_BASE_URL=$VITE_API_BASE_URL\" && tsc -b && vite build",
+  "lint": "eslint .",
+  "preview": "vite preview"
+},
+
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "axios": "^1.11.0",
