--- a/Backend/package.json
+++ b/Backend/package.json
@@ -32,7 +32,9 @@
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "cloudinary": "^1.41.3",
     "exceljs": "^4.4.0",
+    "multer-storage-cloudinary": "^4.0.0",
     "mysql2": "^3.14.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
