--- a/Backend/.gitignore
+++ b/Backend/.gitignore
@@ -35,8 +35,11 @@ lerna-debug.log*
 !.vscode/launch.json
 !.vscode/extensions.json
 
+ca.pem
+
 # dotenv environment variable files
 .env
+.env.production
 .env.development.local
 .env.test.local
 .env.production.local
