--- a/Backend/.gitignore
+++ b/Backend/.gitignore
@@ -38,12 +38,13 @@ lerna-debug.log*
 ca.pem
 
 # dotenv environment variable files
-.env
 .env.production
 .env.development.local
 .env.test.local
 .env.production.local
 .env.local
+.environment
+.env
 
 # temp directory
 .temp
